leetCode 문제풀이 // intToString(API안쓰고), int 배열 순위 String로 바꿔서 리턴하기, 2의 거듭제곱 확인, 3번째로 큰수 반환

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,6 @@
 eclipse.preferences.version=1
+encoding//src/algorithm/CollatzConjecture.java=UTF-8
 encoding//src/algorithm/CommonChars.java=UTF-8
+encoding//src/algorithm/MyAtoi.java=UTF-8
 encoding//src/algorithm/Solution_hn.java=UTF-8
 encoding//src/algorithm/level1.java=UTF-8
