--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -2,5 +2,6 @@ eclipse.preferences.version=1
 encoding//src/algorithm/CollatzConjecture.java=UTF-8
 encoding//src/algorithm/CommonChars.java=UTF-8
 encoding//src/algorithm/MyAtoi.java=UTF-8
+encoding//src/algorithm/Prices.java=UTF-8
 encoding//src/algorithm/Solution_hn.java=UTF-8
 encoding//src/algorithm/level1.java=UTF-8
